# KBLite

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app-config.json  app.py  deps.py  index.html  mcp_tasks.py  prompt.py  pyproject.toml  requirements.txt  restart.bat  sqlite_store.py  statusline.py
.github/workflows/: ci.yml
commands/: agent-team-general.md  agent-team-it.md
doc/: DESIGN-001_kblite-overview.md  DESIGN-002_kblite-basic-design.md
installer/: KBLite_Setup.spec  KBLite_Uninstall.spec  build_installer.bat  kblite_installer.py  kblite_uninstaller.py
installer/source/: app-config.json  app.py  index.html  mcp_tasks.py  prompt.py  sqlite_store.py
installer/source/commands/: agent-team-general.md  agent-team-it.md
installer/source/models/: __init__.py
models/: task.py
routes/: chat.py  observability.py  permission.py  project.py  search.py  session.py  system.py  task.py
scripts/: perm_request_hook.py  run_perm_hook.bat  session_start_banner.py  statusline.py  sync_todowrite.py
src/: app.py  db.py  mcp_server.py
src/templates/: base.html  index.html  memories.html  search.html  session_detail.html  sessions.html
static/: style.css
static/css/: style.css
static/js/: attach.js  chat.js  config.js  core.js  export.js  file-path-linkify.js  main.js  observability.js  rate-limits.js  search.js  sidebar.js  tasks.js  turn-warning.js
stores/: __init__.py  conversation_mixin.py  fts_mixin.py  project_mixin.py  session_mixin.py  task_mixin.py
tests/: test_app.py  test_db.py  test_mcp_server.py
(+27 files in other folders)
